--- a/index.html
+++ b/index.html
@@ -47,6 +47,21 @@
         </div>
         </header>
         <div class="main__content content">
+            <div class="gray-block"><img src="./svg/line01.svg" alt=""></div>
+            <div class="gray-block"><img src="./svg/line02.svg" alt=""></div>
+            <div class="gray-block"><img src="./svg/line03.svg" alt=""></div>
+            <div class="gray-block"><img src="./svg/line04.svg" alt=""></div>
+            <div class="gray-block"><img src="./svg/line05.svg" alt=""></div>
+            <div class="gray-block"><img src="./svg/line05.svg" alt=""></div>
+            <div class="gray-block"><img src="./svg/minibox.svg" alt=""></div>
+            <div class="gray-block"><img src="./svg/minibox.svg" alt=""></div>
+            <div class="gray-block"><img src="./svg/minibox.svg" alt=""></div>
+            <div class="gray-block"><img src="./svg/minibox.svg" alt=""></div>
+            <div class="gray-block"><img src="./svg/minibox.svg" alt=""></div>
+
+            <div class="gray-block"><img src="./svg/box.svg" alt=""></div>
+            <div class="gray-block"><img src="./svg/box.svg" alt=""></div>
+            <div class="gray-block"><img src="./svg/logomini.svg" alt=""></div>
             <div class="content__shirma">
             <div class="content__container">
                 <div class="content__top">
@@ -107,7 +122,7 @@
 
                        <div class="character__container2">
                         <h2 class="black">Sage </h2>
-                        <h3 class="black">Chine</h3>
+                        <h3 >Chine</h3>
                         <div class="character__bottom white">
                             <div class="character__icon"><img src="./svg/character41.svg" alt=""></div>
                             <div class="character__icon" id="one"><img src="./svg/character42.svg" alt=""></div>
@@ -119,7 +134,24 @@
                    
                 </div>
             </div>
-                <div class="content__bottom"></div>
+                <div class="content__bottom bottom">
+                    <div class="bottom__container">
+                    <div class="bottom__information">
+                        <div class="bottom__left">
+                            <h2 class="bottom__title">Basic</h2>
+                            <h3 class="bottom__subtitle">Slow Orb</h3>
+                            <h4 class="bottom__text">Cast out a radianite orb that breaks into a slowing field upon impact with the ground</h4>
+                        </div>
+                        <div class="bottom__right">
+                            <div class="bottom__square">
+                                <div class="bottom__image">
+                                    <img src="" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                </div>
             </div>
         </div>
     </div>
