--- a/index.html
+++ b/index.html
@@ -145,11 +145,46 @@
                         <div class="bottom__right">
                             <div class="bottom__square">
                                 <div class="bottom__image">
-                                    <img src="" alt="">
+                                    <img src="./svg/inform01.svg" alt="">
                                 </div>
                             </div>
                         </div>
                     </div>
+                </div>
+                    <div class="bottom__container">
+                    <div class="bottom__information">
+                        <div class="bottom__left">
+                            <h2 class="bottom__title">Signature</h2>
+                            <h3 class="bottom__subtitle">Healing Orb</h3>
+                            <h4 class="bottom__text"> Heal an ally or yourself to full health over a few second</h4>
+                        </div>
+                        <div class="bottom__right">
+                            <div class="bottom__square">
+                                <div class="bottom__image">
+                                    <img src="./svg/inform03.svg" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                    <div class="bottom__container">
+                    <div class="bottom__information">
+                        <div class="bottom__left">
+                            <h2 class="bottom__title">Ultimate</h2>
+                            <h3 class="bottom__subtitle">Ressurection</h3>
+                            <h4 class="bottom__text">Target a friendly corpse. After a short delay. revive them with full health.</h4>
+                        </div>
+                        <div class="bottom__right">
+                            <div class="bottom__square">
+                                <div class="bottom__image">
+                                    <img src="./svg/inform02.svg" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                    <div class="bottom__next">
+                    <img src="./svg/playX.svg" alt="">
                 </div>
                 </div>
             </div>
